--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <h1>Psychologická poradna PhDr. Mgr. Bc. Roman Pospíšil, Ph.D.</h1>
         <img src="psychologist.jpg" alt="Psychologická poradna PhDr. Mgr. Bc. Roman Pospíšil, Ph.D.">
         <p>
-            Vítejte v soukromé psychologické poradně!
-            Nabízím vám komplexní psychologické služby v příjemném a diskrétním prostředí v blízkosti centra města. S empatií, profesionalitou a individuálním přístupem vám pomohu na cestě k duševní rovnováze a osobnímu růstu. Mým cílem je pomoci vám lépe porozumět sobě samým, překonat životní výzvy a dosáhnout duševní pohody. Jsem tu pro vás v každé životní situaci, ať už procházíte náročným obdobím, potýkáte se např. s úzkostí či depresí, řešíte vztahové problémy nebo jen cítíte, že potřebujete změnu. Věřím, že každý člověk má v sobě potenciál k osobnímu růstu a překonání životních překážek. Kontaktujte mě ještě dnes a udělejte první krok k pozitivní změně ve Vašem životě.
+            Vítejte v soukromé psychologické poradně.
+            Nabízím komplexní psychologické služby v příjemném a diskrétním prostředí v blízkosti centra města. S empatií, profesionalitou a individuálním přístupem vám pomohu na cestě k duševní rovnováze a osobnímu růstu. Mým cílem je pomoci vám lépe porozumět sobě samým, překonat životní výzvy a dosáhnout duševní pohody. Jsem tu pro vás v každé životní situaci, ať už procházíte náročným obdobím, potýkáte se např. s úzkostí či depresí, řešíte vztahové problémy nebo jen cítíte, že potřebujete změnu. Věřím, že každý člověk má v sobě potenciál k osobnímu růstu a překonání životních překážek. Kontaktujte mě a udělejte první krok k pozitivní změně ve Vašem životě.
         </p>
         <nav>
             <a href="#" onclick="showTab('offerings')">Nabídka psychologických služeb</a>
@@ -89,7 +89,7 @@
                 <li>Osobnostní rozvoj</li>
             </ul>
             <h3>Psychologická diagnostika</h3>
-            <p>Nabízím komplexní psychologickou diagnostika, která vám pomůže lépe porozumět vašim silným stránkám, výzvám a potenciálu. Pracuji s širokou škálou standardizovaných diagnostických metod a testů zahrnující:</p>
+            <p>Nabízím komplexní psychologickou diagnostiku, která vám pomůže lépe porozumět vašim silným stránkám, výzvám a potenciálu. Pracuji s širokou škálou standardizovaných diagnostických metod a testů zahrnující:</p>
             <ul>
                 <li>Osobnostní testy</li>
                 <li>Testy inteligence a kognitivních schopností</li>
@@ -113,7 +113,7 @@
             <h3>Krizová intervence</h3>
             <p>Cílem tohoto poradenství jsou intervence psychologa, které směřují k snížení intenzity krize u klientů, k obnovení jejich psychické rovnováhy, posílení copingových mechanismů, prevenci dlouhodobých negativních dopadů krize a podpoře návratu k běžnému fungování. Psychologická krizová intervence je časově omezená (obvykle 4-6 týdnů) a zaměřená na okamžitou stabilizaci a podporu adaptivního zvládání akutní krize. </p>
             <h3>Online konzultace</h3>
-            <p>Je pochopitelné, že ne vždy je možné nebo pohodlné navštívit psychologickou poradnu osobně. Proto nabízím také formu online konzultací, které vám umožní:</p>
+            <p>Je pochopitelné, že ne vždy je možné nebo pohodlně navštívit psychologickou poradnu osobně. Proto nabízím také formu online konzultací, které vám umožní:</p>
             <ul>
                 <li>Flexibilitu v plánování sezení</li>
                 <li>Pohodlí z vašeho domova</li>
