--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Psychologická poradna PhDr. Mgr. Bc. Roman Pospíšil, Ph.D.</h1>
+        <h1>Psychologická poradna</h1>
         <img src="psychologist.jpg" alt="Psychologická poradna PhDr. Mgr. Bc. Roman Pospíšil, Ph.D.">
         <p>
             Vítejte v soukromé psychologické poradně.
-            Nabízím komplexní psychologické služby v příjemném a diskrétním prostředí v blízkosti centra města. S empatií, profesionalitou a individuálním přístupem vám pomohu na cestě k duševní rovnováze a osobnímu růstu. Mým cílem je pomoci vám lépe porozumět sobě samým, překonat životní výzvy a dosáhnout duševní pohody. Jsem tu pro vás v každé životní situaci, ať už procházíte náročným obdobím, potýkáte se např. s úzkostí či depresí, řešíte vztahové problémy nebo jen cítíte, že potřebujete změnu. Věřím, že každý člověk má v sobě potenciál k osobnímu růstu a překonání životních překážek. Kontaktujte mě a udělejte první krok k pozitivní změně ve Vašem životě.
+            Nabízím komplexní psychologické služby v příjemném prostředí v blízkosti centra města. S empatií, profesionalitou a individuálním přístupem vám pomohu na cestě k duševní rovnováze a osobnímu růstu. Mým cílem je pomoci vám lépe porozumět sobě samým, překonat životní výzvy a dosáhnout duševní pohody. Jsem tu pro vás v každé životní situaci, ať už procházíte náročným obdobím, potýkáte se např. s úzkostí či depresí, řešíte vztahové problémy nebo jen cítíte, že potřebujete změnu. Věřím, že každý člověk má v sobě potenciál k osobnímu růstu a překonání životních překážek. Kontaktujte mě a udělejte první krok k pozitivní změně ve Vašem životě.
         </p>
         <nav>
-            <a href="#" onclick="showTab('offerings')">Nabídka psychologických služeb</a>
+            <a href="#" onclick="showTab('offerings')">Služby</a>
             <a href="#" onclick="showTab('about')">O mně</a>
-            <a href="#" onclick="showTab('reservation')">Objednání a ceník služeb</a>
+            <a href="#" onclick="showTab('reservation')">Objednání</a>
             <a href="#" onclick="showTab('contact')">Kontakt</a>
         </nav>
         <div id="offerings" class="content active">
@@ -113,7 +113,7 @@
             <h3>Krizová intervence</h3>
             <p>Cílem tohoto poradenství jsou intervence psychologa, které směřují k snížení intenzity krize u klientů, k obnovení jejich psychické rovnováhy, posílení copingových mechanismů, prevenci dlouhodobých negativních dopadů krize a podpoře návratu k běžnému fungování. Psychologická krizová intervence je časově omezená (obvykle 4-6 týdnů) a zaměřená na okamžitou stabilizaci a podporu adaptivního zvládání akutní krize. </p>
             <h3>Online konzultace</h3>
-            <p>Je pochopitelné, že ne vždy je možné nebo pohodlně navštívit psychologickou poradnu osobně. Proto nabízím také formu online konzultací, které vám umožní:</p>
+            <p>Je pochopitelné, že ne vždy je možné navštívit psychologickou poradnu osobně. Proto nabízím také formu online konzultací, které vám umožní:</p>
             <ul>
                 <li>Flexibilitu v plánování sezení</li>
                 <li>Pohodlí z vašeho domova</li>
@@ -170,7 +170,6 @@
                 IČO 22570331
                 tel.: +420 776 394 642
                 e-mail: rmn.pospisil@seznam.cz
-                Skype: Roman Pospíšil
                 Hlavní vchod do psychologické poradny je z Havlíčkova nábřeží, vedoucí do haly s recepcí. Poradna se nachází ve 4. patře vpravo, kancelář č. 401. V případě nejasností se obracejte na recepci nebo volejte +420 776 394 642. Vjezd na parkoviště (z druhé strany budovy) je z ulice Matiční.
                 MHD: Most Pionýrů-Trolejbusy číslo: 104, 109, Autobusy číslo: 22, 29, 30, 99
             </p>
