--- a/index.html
+++ b/index.html
@@ -162,17 +162,27 @@
             <h2>Kontakt</h2>
             <b>PhDr. et Mgr. et Bc. Roman Pospíšil, Ph.D.</b>
             <br>
-            <p>
-                Havlíčkovo nábřeží 2728/38
-                Moravská Ostrava
-                702 00 Ostrava
-                (budova Technoprojektu – Kancelářské centrum)
-                IČO 22570331
-                tel.: +420 776 394 642
-                e-mail: rmn.pospisil@seznam.cz
-                Hlavní vchod do psychologické poradny je z Havlíčkova nábřeží, vedoucí do haly s recepcí. Poradna se nachází ve 4. patře vpravo, kancelář č. 401. V případě nejasností se obracejte na recepci nebo volejte +420 776 394 642. Vjezd na parkoviště (z druhé strany budovy) je z ulice Matiční.
-                MHD: Most Pionýrů-Trolejbusy číslo: 104, 109, Autobusy číslo: 22, 29, 30, 99
-            </p>
+            <ul>
+                <li>Havlíčkovo nábřeží 2728/38</li>
+                <li>Moravská Ostrava</li>
+                <li>702 00 Ostrava</li>
+                <li>Budova Technoprojektu – Kancelářské centrum</li>
+                <li>IČO: 22570331</li>
+                <li>Tel.: +420 776 394 642</li>
+                  <li>E-mail: <a href="mailto:rmn.pospisil@seznam.cz">rmn.pospisil@seznam.cz</a></li>
+                  <li>
+                    Hlavní vchod do psychologické poradny je z Havlíčkova nábřeží, vedoucí do haly s recepcí.
+                    Poradna se nachází ve 4. patře vpravo, kancelář č. 401. V případě nejasností se obracejte na recepci nebo volejte +420 776 394 642.
+                  </li>
+                  <li>Vjezd na parkoviště (z druhé strany budovy) je z ulice Matiční.</li>
+                  <li>
+                    MHD: Most Pionýrů –
+                    <ul>
+                      <li>Trolejbusy číslo: 104, 109</li>
+                      <li>Autobusy číslo: 22, 29, 30, 99</li>
+                    </ul>
+                  </li>
+                </ul>
             <p>Vložit mapu místa…</p>
         </div>
     </div>
