--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <h2>Kontakt</h2>
             <b>PhDr. et Mgr. et Bc. Roman Pospíšil, Ph.D.</b>
             <br>
-            <ul>
+            <ul style="text-align: left;">
                 <li>Havlíčkovo nábřeží 2728/38</li>
                 <li>Moravská Ostrava</li>
                 <li>702 00 Ostrava</li>
