--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </ul>
                   </li>
                 </ul>
-            <p>Vložit mapu místa…</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2573.119594825291!2d18.289933176185855!3d49.84021033111475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713e3c549d86403%3A0x4fd5fb1a3d28d05f!2sREPRO%20TPO!5e0!3m2!1scs!2scz!4v1747056783183!5m2!1scs!2scz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
     <script>
