--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background: #e3dedb;
+            background: #fffaf3;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
