--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Psycholog Pospíšil</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: system-ui;
             background-color: #f5f5dc;
             color: #2c3e50;
             margin: 0;
